corrected profile/card spacing

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   max-width: 880px;
+  padding-bottom: 32.25px;
 }
 
 .profile__picture {
@@ -85,6 +86,7 @@
   .profile {
     flex-direction: column;
     align-items: center;
+    padding-bottom: 18px;
   }
   .profile__picture {
     margin: 38.25px 0px 0px 0px;
